# owlkit

./: Makefile  README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: publish-pypi.yml
docs/: NON-INTERACTIVE-MODE.md  SBPACK-DEPLOYMENT.md  SBPACK-SUCCESS-NOTES.md  TEST-REPORT.md  TESTING.md
owlkit/: __init__.py  cli.py
owlkit/config/: __init__.py  credentials.py
owlkit/cwl/: __init__.py  runner.py
owlkit/docker/: __init__.py  ghcr.py
owlkit/sbpack/: __init__.py  manager.py
tests/: __init__.py  conftest.py  test_cli.py  test_credentials.py  test_cwl.py  test_docker.py  test_integration.py  test_sbpack.py  test_sbpack_credentials.py  test_utils.py
yaml2json-task/: gdc_yaml2json_fixed.cwl  yaml2json-job.yml
