[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "owlkit"
version = "0.1.0"
description = "OWL (Open Workflow Library) toolkit for managing CWL workflows, Docker images, and Seven Bridges integration"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "OWL Team", email = "hoot@promptable.ai"},
]
keywords = ["cwl", "docker", "sbpack", "seven-bridges", "workflow", "bioinformatics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "keyring>=23.0",
    "cryptography>=3.0",
    "requests>=2.25",
    "rich>=10.0",
    "python-dotenv>=0.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.960",
    "pre-commit>=2.20",
]

[project.scripts]
owlkit = "owlkit.cli:main"

[project.urls]
Homepage = "https://github.com/open-workflow-library/owlkit"
Documentation = "https://github.com/open-workflow-library/owlkit"
Repository = "https://github.com/open-workflow-library/owlkit"
Issues = "https://github.com/open-workflow-library/owlkit/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["owlkit*"]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=owlkit --cov-report=term-missing"